安珈硕的文档

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -4,5 +4,12 @@
   "newLinkFormat": "shortest",
   "alwaysUpdateLinks": true,
   "vimMode": false,
-  "strictLineBreaks": true
+  "strictLineBreaks": true,
+  "pdfExportSettings": {
+    "includeName": true,
+    "pageSize": "A4",
+    "landscape": false,
+    "margin": "2",
+    "downscalePercent": 70
+  }
 }
