--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -4,6 +4,6 @@
   "theme": "obsidian",
   "baseFontSize": 24,
   "monospaceFontFamily": "JetBrains Mono,Sarasa Fixed SC",
-  "textFontFamily": "Palatino Linotype,Palatino,霞鹜文楷,思源黑体 CN,Times New Roman,MS Mincho",
+  "textFontFamily": "Palatino,Palatino Linotype,霞鹜文楷,思源黑体 CN,Times New Roman,MS Mincho",
   "interfaceFontFamily": "Arial,思源黑体 CN"
 }
